--- a/vcweb/core/templates/contact.html
+++ b/vcweb/core/templates/contact.html
@@ -5,12 +5,16 @@
 {% block page %}
 <div id='post'>
 	<h2 class='title'>Contact Us</h2>
-	<div class='entry'>
-        Please feel free to send us feedback, suggestions, or comments via our
-        <a class='external' href='http://commons.asu.edu/contact'>contact form</a>.
-        <br/><br/>
-        We also maintain an issue tracker at <a class='external' href='https://bitbucket.org/virtualcommons/vcweb/issues'>BitBucket</a>.
-	</div>
+    <div class='panel panel-warning'>
+        <div class='panel-heading'>VCWeb Beta</div>
+        <div class='panel-body'>
+            VCWeb is currently in a closed beta. If you'd like to request an experimenter account or have any bug
+            reports or feedback for our development team please feel free to 
+            <a class='external' href='http://commons.asu.edu/contact'>email us via our contact form</a> or 
+            <a class='external' href='https://bitbucket.org/virtualcommons/vcweb/issues'>create issues on our BitBucket issue tracker</a>.
+            Thanks for your interest!
+        </div>
+    </div>
 </div>
 {% endblock page %}
 
